# removert

./: .gitignore  CMakeLists.txt  README.md  package.xml
app/cli/: CMakeLists.txt  removert_cli.cpp
bench/: CMakeLists.txt  bench_projection.cpp
config/: params.yaml  params_hdl_graph_slam.yaml  params_kitti.yaml  params_mulran_scliosam.yaml  v2_default.json
core/: CMakeLists.txt
core/include/removert/: geometry.hpp  pipeline.hpp  range_image.hpp  remove.hpp  revert.hpp  types.hpp
core/include/removert/util/: views.hpp
core/src/: geometry.cpp  pipeline.cpp  range_image.cpp  remove.cpp  revert.cpp  types_inst.cpp
docs/: gpu-handoff-prompt.md  v2-plan.md
gpu/: CMakeLists.txt
gpu/include/removert/gpu/: knn_gpu.hpp  projection.cuh
gpu/src/: knn_gpu.cpp  projection.cu
include/removert/: Removerter.h  RosParamServer.h  utility.h
io/: CMakeLists.txt
io/include/removert/io/: config_loader.hpp  dataset_reader.hpp  hdf5_reader.hpp  hdf5_writer.hpp  kitti_dir_reader.hpp  pcd_writer.hpp  sqlite_reader.hpp
io/src/: config_loader.cpp  hdf5_reader.cpp  hdf5_writer.cpp  kitti_dir_reader.cpp  pcd_writer.cpp  sqlite_reader.cpp
launch/: removert_visualization.rviz  run.launch  run_hdl_graph_slam.launch  run_kitti.launch  run_scliosam.launch
src/: Removerter.cpp  RosParamServer.cpp  removert_main.cpp  utility.cpp
tests/: CMakeLists.txt  test_config_loader.cpp  test_geometry.cpp  test_hdf5_writer.cpp  test_parity.cpp  test_pcd_writer.cpp  test_pipeline_synthetic.cpp  test_range_image.cpp  test_revert.cpp  test_visibility.cpp
tools/: build_seq01_sqlite.py  fetch_kitti_seq01.sh
tools/matlab/: viewer_static_dynamic_overlap.m  viewer_staticmap_only.m
